host/macro/tests/ui/custom_section.stderr
error[E0425]: cannot find value `Foo` in this scope
 --> tests/ui/custom_section.rs:1:49
  |
1 | js_bindgen::unsafe_embed_asm!("{}", interpolate Foo);
  |                                                 ^^^ not found in this scope

warning: unnecessary parentheses around assigned value
  --> tests/ui/custom_section.rs:24:21
   |
24 |     required_embeds = [("qux")],
   |                        ^     ^
   |
   = note: `#[warn(unused_parens)]` (part of `#[warn(unused)]`) on by default
help: remove these parentheses
   |
24 -     required_embeds = [("qux")],
24 +     required_embeds = ["qux" ],
   |

error[E0308]: mismatched types
 --> tests/ui/custom_section.rs:6:49
  |
6 | js_bindgen::unsafe_embed_asm!("{}", interpolate Bar);
  |                                                 ^^^ expected `&str`, found `Bar`

error[E0308]: mismatched types
 --> tests/ui/custom_section.rs:9:49
  |
9 | js_bindgen::unsafe_embed_asm!("{}", interpolate 42);
  |                                                 ^^ expected `&str`, found integer

error[E0308]: mismatched types
  --> tests/ui/custom_section.rs:12:73
   |
12 | js_bindgen::import_js!(module = "foo", name = "bar", required_embeds = [42], "");
   |                                                                         ^^ expected `(&str, &str)`, found integer
   |
   = note: expected tuple `(&'static str, &'static str)`
               found type `{integer}`

error[E0308]: mismatched types
  --> tests/ui/custom_section.rs:15:72
   |
15 | js_bindgen::embed_js!(module = "foo", name = "bar", required_embeds = [42], "");
   |                                                                        ^^ expected `(&str, &str)`, found integer
   |
   = note: expected tuple `(&'static str, &'static str)`
               found type `{integer}`

error[E0308]: mismatched types
  --> tests/ui/custom_section.rs:18:73
   |
18 | js_bindgen::import_js!(module = "foo", name = "bar", required_embeds = ["qux"], "");
   |                                                                         ^^^^^ expected `(&str, &str)`, found `&str`
   |
   = note:  expected tuple `(&'static str, &'static str)`
           found reference `&'static str`

error[E0308]: mismatched types
  --> tests/ui/custom_section.rs:24:21
   |
24 |     required_embeds = [("qux")],
   |                        ^^^^^^^ expected `(&str, &str)`, found `&str`
   |
   = note:  expected tuple `(&'static str, &'static str)`
           found reference `&'static str`

error[E0308]: mismatched types
  --> tests/ui/custom_section.rs:32:21
   |
32 |     required_embeds = [("qux",)],
   |                        ^^^^^^^^ expected a tuple with 2 elements, found one with 1 element
   |
   = note: expected tuple `(&'static str, &'static str)`
              found tuple `(&'static str,)`

error: aborting due to 8 previous errors; 1 warning emitted

Some errors have detailed explanations: E0308, E0425.
For more information about an error, try `rustc --explain E0308`.
